<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
	<string name="app_name">nRF Connected Ebike</string>
	<string name="feature_name">EBIKE</string>

	<string name="menu_filter">Filter</string>
	<string name="menu_filter_uuid">Only devices advertising Ebike UUID</string>
	<string name="menu_filter_nearby">Only nearby devices</string>

	<string name="unknown">Unknown</string>
	<string name="unknown_device">Unknown Device</string>

	<!--> Read only <!-->
	<string name="batVolt_title">Voltage</string>
	<string name="batVolt_summary">Display the Battery Voltage</string>
	<string name="batVolt_unit">[mV]</string>

	<string name="battery_current_title">Current</string>
	<string name="battery_current_summary">Display the Battery Current</string>
	<string name="battery_current_unit">[mA]</string>

	<string name="charger_current_title">Charger Current</string>
	<string name="charger_current_summary">Display the Current on Charger</string>
	<string name="charger_current_unit">[0.1A]</string>

	<string name="curFault_title">Fault</string>
	<string name="curFault_summary">Fault on system</string>
	<string name="curFault_unit"></string>

	<string name="balanceInWork_title">Balance</string>
	<string name="balanceInWork_summary">Are we balancing?</string>
	<string name="balanceInWork_unit"></string>

	<string name="smMain_title">State Machine</string>
	<string name="smMain_summary">Current state of BMS</string>
	<string name="smMain_unit"></string>

	<!--> Read & Write <!-->
	<string name="serialNumber_title">Serial number</string>
	<string name="serialNumber_summary">Unique device serial number (hexa)</string>
	<string name="serial_number_btn_send">SEND</string>

	<string name="unblockSm_title">Unblock sm Main</string>
	<string name="unblockSm_summary">Unblock the state machine when in SM_BATTERY_DEAD</string>

	<string name="charger_current_high_title">Charger current HIGH limit</string>
	<string name="charger_current_high_summary">Maximal current of charge [0.1A]</string>
	<string name="charger_current_high_btn_send">SEND</string>

	<string name="charger_current_low_title">Charger current LOW limit</string>
	<string name="charger_current_low_summary">Minimal current of charge [0.1A]</string>
	<string name="charger_current_low_btn_send">SEND</string>

	<!--> System <!-->
	<string name="turn_on">On</string>
	<string name="turn_off">Off</string>
	<string name="title_led_state">LED</string>
	<string name="edit_message">Enter a message</string>


	<string name="button_pressed">Pressed</string>
	<string name="button_released">Released</string>

	<string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
	<string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Ebike</b> will not use this information in any way.</string>
	<string name="location_permission_action">Grant permission</string>
	<string name="location_permission_settings">Settings</string>

	<string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
	<string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
	<string name="bluetooth_disabled_action">Enable</string>

	<string name="ebike_guide_title">CAN\'T SEE YOUR EBIKE?</string>
	<string name="ebike_guide_info">1. Make sure the EBIKE is <b>turned on</b>
        \n\n2. Make sure the <b>ble_app_ebike</b> firmware and SoftDevice are flashed.</string>
	<string name="ebike_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Ebike is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
	<string name="ebike_guide_location_action">Enable</string>

	<string name="not_supported_title">DEVICE NOT SUPPORTED</string>
	<string name="not_supported_info">1. The Connected Ebike service hasn\'t been found on the device\'s attribute table.
		\n\n2. Make sure the nRF is flashed with the correct firmware.
		\n\n3. If you used the nRF with another firmware before, the old services might have been cached by the system.</string>
	<string name="not_supported_action">Fix and try again</string>

	<string name="state_connecting">Connecting…</string>
	<string name="state_initializing">Initializing…</string>
</resources>
