<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ConnectedEbikeActivity"
	tools:ignore="ContentDescription">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/AppTheme.PopupOverlay" />

	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
		android:id="@+id/device_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/appbar_layout"
		android:layout_marginTop="43dp"
		android:visibility="gone"
		tools:visibility="visible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/unblockSm_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_toolbar_lightbulb"
						app:title="@string/title_led_state"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/unblockSm_summary"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/unblockSm_summary"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/unblockSm_tool_bar" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/unblockSm_state"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:padding="@dimen/activity_horizontal_margin"
						android:text="@string/turn_off"
						android:textAllCaps="true"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/unblockSm_summary" />

					<com.google.android.material.switchmaterial.SwitchMaterial
						android:id="@+id/unblockSm_switch"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_horizontal_margin"
						app:layout_constraintBaseline_toBaselineOf="@+id/unblockSm_state"
						app:layout_constraintEnd_toEndOf="parent" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/batVolt_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_toolbar_battery"
						app:title="@string/title_button_state"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/batVolt_summary"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/batVolt_summary"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/batVolt_tool_bar" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/batVolt_unit"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_horizontal_margin"
						android:text="@string/battery_unit"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/batVolt_summary" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/batVolt_txt"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:padding="@dimen/activity_horizontal_margin"
						android:text="@string/unknown"
						android:textAllCaps="true"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
						app:layout_constraintBaseline_toBaselineOf="@+id/batVolt_unit"
						app:layout_constraintRight_toRightOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_horizontal_margin"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/serialNumber_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_toolbar_button"
						app:title="@string/title_serial_number"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/serialNumber_summary"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/serialNumber_summary"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/serialNumber_tool_bar" />

					<EditText
						android:id="@+id/serialNumber_txt"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/unknown"
						android:inputType="number"
						android:maxLength="9"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/serialNumber_summary" />

					<Button
						android:id="@+id/serialNumber_btn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/serial_number_btn_send"
						app:layout_constraintBaseline_toBaselineOf="@+id/serialNumber_txt"
						app:layout_constraintEnd_toEndOf="parent" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/progress_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:visibility="gone"
		tools:visibility="gone">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/connection_state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="16sp"
			tools:text="@string/state_connecting" />

		<ProgressBar
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:indeterminate="true" />
	</LinearLayout>

	<include
		android:id="@+id/not_supported"
		layout="@layout/info_not_supported"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:visibility="gone"
		tools:visibility="gone" />
</RelativeLayout>